cluster/apps/rook-ceph/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918@kubernetescrd"
  labels:
    app.kubernetes.io/instance: rook-ceph-mgr-dashboard
    app.kubernetes.io/name: rook-ceph-mgr-dashboard
spec:
  ingressClassName: "traefik"
  rules:
    - host: rook.${DOMAIN_2}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port: 
                  name: http-dashboard
  tls:
    - hosts:
        - "rook.${DOMAIN_2}"
      secretName: "${DOMAIN_2/./-}-tls"
